Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,10 +122,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'n' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b916edb4d48e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m'SeanAbu'\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;36m12345678\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m }\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mphonebook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'n' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "phonebook = {\n",
+    "    'Dan' : 3675309,\n",
+    "    'Andrew' : 5555555,\n",
+    "    'SeanAbu' : 12345678\n",
+    "}\n",
+    "phonebook(n)"
+   ]
   },
   {
    "cell_type": "markdown",
