--- a/index.ipynb
+++ b/index.ipynb
@@ -122,19 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'dict' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-79278b0149c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m'SeanAbu'\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;36m12345678\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m }\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mphonebook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Dan'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'dict' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "<function dict.values>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -143,7 +142,7 @@
     "    'Andrew' : 5555555,\n",
     "    'SeanAbu' : 12345678\n",
     "}\n",
-    "phonebook()"
+    "phonebook.values"
    ]
   },
   {
