Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,16 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3675309"
+       "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
     "    'Andrew' : 5555555,\n",
     "    'SeanAbu' : 12345678\n",
     "}\n",
-    "phonebook['Dan']"
+    "'Dan' in phonebook"
    ]
   },
   {
