Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,27 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def namenumber(call_me, phonebook):\n",
+    "    for n in call_me:\n",
+    "        if n in phonebook:\n",
+    "            print(n + '='+ phonebook[n])\n",
+    "\n",
+    "\n",
+    "\n",
     "phonebook = {\n",
     "    'Dan' : 3675309,\n",
     "    'Andrew' : 5555555,\n",
     "    'SeanAbu' : 12345678\n",
     "}\n",
-    "'Dan' in phonebook"
+    "call_me = ['Andrew','SeanAbu']"
    ]
   },
   {
