--- a/index.ipynb
+++ b/index.ipynb
@@ -122,9 +122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.namenumber(call_me, phonebook)>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def namenumber(call_me, phonebook):\n",
     "    for n in call_me:\n",
@@ -138,7 +149,8 @@
     "    'Andrew' : 5555555,\n",
     "    'SeanAbu' : 12345678\n",
     "}\n",
-    "call_me = ['Andrew','SeanAbu']"
+    "call_me = ['Andrew','SeanAbu']\n",
+    "namenumber"
    ]
   },
   {
