Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,19 +122,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-d55340b7162e>, line 8)",
+     "evalue": "invalid syntax (<ipython-input-15-be0b409587f3>, line 15)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-d55340b7162e>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    phonebook = {\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-be0b409587f3>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    namenumber(call_me, phonebook)\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
+    "phonebook = {\n",
+    "    'Dan' : 3675309,\n",
+    "    'Andrew' : 5555555,\n",
+    "    'SeanAbu' : 12345678\n",
+    "}\n",
+    "call_me = ['Andrew','SeanAbu']\n",
     "def namenumber(call_me, phonebook):\n",
     "    for n in call_me:\n",
     "        if n in phonebook:\n",
@@ -142,12 +148,7 @@
     "\n",
     "\n",
     "\n",
-    "phonebook = {\n",
-    "    'Dan' : 3675309,\n",
-    "    'Andrew' : 5555555,\n",
-    "    'SeanAbu' : 12345678\n",
-    "}\n",
-    "call_me = ['Andrew','SeanAbu']\n",
+    "\n",
     "namenumber(call_me, phonebook)"
    ]
   },
