Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,15 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-be0b409587f3>, line 15)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-be0b409587f3>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    namenumber(call_me, phonebook)\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Andrew=5555555\n",
+      "SeanAbu=12345678\n"
      ]
     }
    ],
@@ -144,11 +144,7 @@
     "def namenumber(call_me, phonebook):\n",
     "    for n in call_me:\n",
     "        if n in phonebook:\n",
-    "            print(n + '='+ str(phonebook[n])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "            print(n + '='+ str(phonebook[n]))\n",
     "namenumber(call_me, phonebook)"
    ]
   },
